--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,26 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <Button
-        android:id="@+id/button_toast"
-        android:layout_width="168dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:onClick="showToast"
-        android:text="@string/button_label_toast"
-        android:textColor="@color/white"
-        />
 
     <TextView
         android:id="@+id/show_count"
-        android:layout_width="206dp"
-        android:layout_height="246dp"
+        android:layout_width="232dp"
+        android:layout_height="318dp"
         android:layout_below="@+id/button_toast"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="179dp"
-        android:layout_marginLeft="179dp"
-        android:layout_marginTop="-49dp"
+        android:layout_marginStart="157dp"
+        android:layout_marginLeft="157dp"
+        android:layout_marginTop="-65dp"
         android:background="#FFFF00"
         android:gravity="center|center_vertical"
         android:text="@string/count_initial_value"
@@ -33,26 +24,41 @@
 
     <Button
         android:id="@+id/button_zero"
-        android:layout_width="165dp"
-        android:layout_height="wrap_content"
+        android:layout_width="116dp"
+        android:layout_height="65dp"
         android:layout_below="@+id/button_toast"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="32dp"
         android:backgroundTint="@color/grey"
         android:onClick="zeroBtn"
-        android:text="Zero"
+        android:text="@string/Text_zero"
         android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button_count"
-        android:layout_width="165dp"
-        android:layout_height="wrap_content"
+        android:layout_width="132dp"
+        android:layout_height="66dp"
         android:layout_below="@+id/show_count"
         android:layout_centerVertical="true"
-        android:layout_marginTop="-58dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="-81dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:onClick="countUp"
         android:text="@string/button_label_count"
+        android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/button_toast"
+        android:layout_width="124dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:onClick="showToast"
+        android:text="@string/button_label_toast"
         android:textColor="@color/white" />
 
 </RelativeLayout>
